feat: status pagination
