# backend/api/docs/swagger.json
@@ -482,13 +482,22 @@
                     {
                         "enum": [
                             "expire_date",
-                            "usage",
-                            "is_active"
+                            "usage"
                         ],
                         "type": "string",
                         "default": "\"expire_date\"",
                         "description": "Sort by",
                         "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "enable",
+                            "disable"
+                        ],
+                        "type": "string",
+                        "description": "Status by",
+                        "name": "status",
                         "in": "query"
                     },
                     {
